# sys-rep

./: .gitignore  CMakeLists.txt  bench-blender_2.49.sh  bench-blender_2.59.sh  bench-premier.sh  bench.sh  hosts  launch.sh  main.cpp  makefile.cpp  makefile.h  master.cpp  master.h  out.tree  parser.cpp  parser.h  tree.cpp  tree.h  utils.cpp  utils.h  worker.cpp  worker.h
plots/: WorPro2.59.R  data.sh  datanetworkusage.sh  datanetworkusage.sh~  dataworkerprocess.sh  networkusage.R  plot.R  renameokerror.sh  template.R  workerprocess.R  workerprocess2.59.sh
plots/new/: sys-rep-benchs-blender_2.59-2.results  sys-rep-benchs-blender_2.59.results
plots/new.sys-rep-benchs-blender_2.49/: hosts_workers.clean
plots/new.sys-rep-benchs-blender_2.49/res/blender_2.49/14/14/: 1  10  2  3  4  5  6  7  8  9
plots/new.sys-rep-benchs-blender_2.49/res/blender_2.49/14/56/: 1  10  3  4  5  6  7  8  9
plots/new.sys-rep-benchs-blender_2.49/res/blender_2.49/15/15/: 1  10  2  3  4  5  6  8  9
plots/new.sys-rep-benchs-blender_2.49/res/blender_2.49/15/60/: 1
plots/new.sys-rep-benchs-blender_2.59/res/blender_2.59/1/1/: 1  10  4  7
plots/new.sys-rep-benchs-blender_2.59/res/blender_2.59/1/4/: 10  5  6  7  9
plots/new/sys-rep-benchs.results-1/: sys-rep-benchs.results
plots/new/sys-rep-benchs.results-3/: hosts_workers.clean  sys-rep-benchs.results
plots/sys-rep-benchs.results-2/: hosts_workers.clean  sys-rep-benchs.results
raytracing/: Test.cc  hostfile.txt  random_ray.pl  raytrace  raytrace.cpp  s2.txt  s3.txt  s4.txt  s5.txt  scene.txt  tata.tga  titi.tga  toto.tga
(+659 files in other folders)
